--- a/app/src/main/res/values-ru/strings_preference.xml
+++ b/app/src/main/res/values-ru/strings_preference.xml
@@ -19,7 +19,7 @@
     <string name="pref_title_backup">Резервное копирование</string>
     <string name="pref_title_backup_export">Сохранить данные в файл</string>
     <string name="pref_title_backup_import">Загрузить данные из файла</string>
-    <string name="pref_title_backup_skip">Пропускать одинаковые заметки</string>
+    <string name="pref_title_import_skip">Пропускать одинаковые заметки</string>
 
     <string name="pref_title_note">Заметки</string>
     <string name="pref_title_note_sort">Сортировка заметок</string>
@@ -44,16 +44,16 @@
 
     <!-- Preference summaries -->
 
-    <string name="pref_summary_permission_need">Приложению требуется разрешение</string>
+    <string name="pref_summary_permission_needed">Приложению требуется разрешение</string>
 
     <string name="pref_summary_app_theme">Выбранная тема</string>
 
-    <string name="pref_summary_backup_import_search">Ищем резервный файлы</string>
-    <string name="pref_summary_backup_import_empty">
+    <string name="pref_summary_import_search">Ищем резервный файлы</string>
+    <string name="pref_summary_import_empty">
         У Вас нет файлов для восстановления данных
     </string>
-    <string name="pref_summary_backup_import_found">Найдено файлов: %d</string>
-    <string name="pref_summary_backup_skip">
+    <string name="pref_summary_import_found">Найдено файлов: %d</string>
+    <string name="pref_summary_import_skip">
         Если в приложении уже есть заметка с таким же именем и содержанием, то она не будет
         добавлена при резервном копировании
     </string>
