--- a/app/src/main/res/values-ru/strings_preference.xml
+++ b/app/src/main/res/values-ru/strings_preference.xml
@@ -91,7 +91,7 @@
     </string>
 
     <string name="pref_toast_export_result">Файл успешно сохранён!\nПуть: %s</string>
-    <string name="pref_toast_export_error">Произошла ошибка! Не удалось сохранить файл.</string>
+    <string name="pref_toast_export_error">Произошла ошибка! Не удалось сохранить файл</string>
 
     <string name="pref_toast_melody_replaced">
         Извините, мы не смогли установить выбранную мелодию! Так что мы выбрали другую. :(
