--- a/app/src/main/res/values/strings_preference.xml
+++ b/app/src/main/res/values/strings_preference.xml
@@ -53,7 +53,7 @@
     <string name="pref_summary_import_found">Founded files: %d</string>
     <string name="pref_summary_import_skip">
         If an application already has a note with the same name and content, then it will not be
-        added during backup.
+        added during backup
     </string>
 
     <string name="pref_summary_note_sort">Will be used by default</string>
@@ -79,10 +79,10 @@
     <string name="pref_toast_import_skip">Data successfully added! :)\nSkipped notes: %d</string>
 
     <string name="pref_toast_export_result">File successfully saved!\nPath: %s</string>
-    <string name="pref_toast_export_error">An error has occurred! Failed to save file.</string>
+    <string name="pref_toast_export_error">An error has occurred! Failed to save a file</string>
 
     <string name="pref_toast_melody_replaced">
-        Sorry, we can\'t apply selected melody! So we choose another one. :(
+        Sorry, we can\'t apply selected melody! But we choose another one for you :(
     </string>
 
 </resources>
