--- a/app/src/main/res/layout/activity_develop_print.xml
+++ b/app/src/main/res/layout/activity_develop_print.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context="sgtmelon.scriptum.cleanup.presentation.screen.ui.impl.preference.develop.PrintDevelopActivity">
+        tools:context="sgtmelon.scriptum.develop.screen.print.PrintDevelopActivity">
 
         <include
             android:id="@+id/toolbar_include"
