Move signal button in AlarmPreferenceViewModel.kt to the top

--- a/app/src/main/res/values-ru/strings_preference.xml
+++ b/app/src/main/res/values-ru/strings_preference.xml
@@ -18,8 +18,8 @@
     <string name="pref_title_note_save_period">Период автосохранения</string>
 
     <string name="pref_title_alarm">Уведомления</string>
-    <string name="pref_title_alarm_repeat">Время повтора по-умолчанию</string>
     <string name="pref_title_alarm_signal">Тип сигнала</string>
+    <string name="pref_title_alarm_repeat">Время повтора по-умолчанию</string>
     <string name="pref_title_alarm_melody">Мелодия</string>
     <string name="pref_title_alarm_volume">Громкость</string>
     <string name="pref_title_alarm_increase">Нарастание громкости</string>
@@ -68,10 +68,8 @@
     </string>
     <string name="pref_summary_note_save_period">Количество минут</string>
 
-    <string name="pref_summary_alarm_repeat">
-        Будет применяться, чтобы повторить уведомление
-    </string>
     <string name="pref_summary_alarm_signal">Будет применяться, чтобы предупредить вас</string>
+    <string name="pref_summary_alarm_repeat">Будет применяться, чтобы повторить уведомление</string>
     <string name="pref_summary_alarm_melody">Будет играть в уведомлении</string>
     <string name="pref_summary_alarm_melody_search">Проверяем ваши мелодии</string>
     <string name="pref_summary_alarm_melody_empty">Извините, мы не нашли ни одной мелодии! :(</string>
