--- a/app/src/main/res/values/strings_preference.xml
+++ b/app/src/main/res/values/strings_preference.xml
@@ -19,7 +19,7 @@
 
     <string name="pref_title_alarm">Notifications</string>
     <string name="pref_title_alarm_signal">Signal type</string>
-    <string name="pref_title_alarm_repeat">Default repeat time</string>
+    <string name="pref_title_alarm_repeat">Repeat after</string>
     <string name="pref_title_alarm_melody">Melody</string>
     <string name="pref_title_alarm_volume">Volume</string>
     <string name="pref_title_alarm_increase">Volume increase</string>
@@ -62,13 +62,13 @@
     <string name="pref_summary_note_save_auto">Save note changes after period of time</string>
     <string name="pref_summary_note_save_period">Number of minutes</string>
 
-    <string name="pref_summary_alarm_signal">Will be used for notify you</string>
-    <string name="pref_summary_alarm_repeat">Will be used for repeat notification</string>
+    <string name="pref_summary_alarm_signal">The way how we will notify you</string>
+    <string name="pref_summary_alarm_repeat">Period after which need repeat the notification</string>
     <string name="pref_summary_alarm_melody">Will be play on notification</string>
-    <string name="pref_summary_alarm_melody_search">Check out your melodies</string>
-    <string name="pref_summary_alarm_melody_empty">Sorry, we didn\'t find any melodies! :(</string>
-    <string name="pref_summary_alarm_volume">Percent of volume: %d%%</string>
-    <string name="pref_summary_alarm_increase">Smooth volume increase from minimum</string>
+    <string name="pref_summary_alarm_melody_search">Searching your melodies</string>
+    <string name="pref_summary_alarm_melody_empty">Sorry, we didn\'t found any melodies! :(</string>
+    <string name="pref_summary_alarm_volume">Percent from maximum volume: %d%%</string>
+    <string name="pref_summary_alarm_increase">Smooth volume increase from zero</string>
 
     <string name="pref_summary_help_disappear">And how fix it</string>
 
