--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context="sgtmelon.scriptum.cleanup.presentation.screen.ui.impl.main.MainActivity">
+        tools:context="sgtmelon.scriptum.infrastructure.screen.main.MainActivity">
 
         <FrameLayout
             android:layout_width="match_parent"
