--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="sgtmelon.scriptum.infrastructure.screen.notifications.NotificationActivity">
+    tools:context="sgtmelon.scriptum.infrastructure.screen.notifications.NotificationsActivity">
 
     <data>
 
