Apply binding inside BinFragment.kt

--- a/app/src/main/res/layout/fragment_bin.xml
+++ b/app/src/main/res/layout/fragment_bin.xml
@@ -9,12 +9,14 @@
     </data>
 
     <LinearLayout
-        android:id="@+id/bin_parent_container"
+        android:id="@+id/parent_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <include layout="@layout/inc_toolbar_simple" />
+        <include
+            android:id="@+id/toolbar_include"
+            layout="@layout/inc_toolbar_simple" />
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -28,13 +30,13 @@
                 app:title='@{R.string.info_bin_empty_title}' />
 
             <ProgressBar
-                android:id="@+id/bin_progress"
+                android:id="@+id/progress_bar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/bin_recycler"
+                android:id="@+id/recycler_view"
                 style="@style/RecyclerView.Normal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
