--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -13,12 +13,14 @@
     </data>
 
     <LinearLayout
-        android:id="@+id/notes_parent_container"
+        android:id="@+id/parent_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <include layout="@layout/inc_toolbar_simple" />
+        <include
+            android:id="@+id/toolbar_include"
+            layout="@layout/inc_toolbar_simple" />
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -32,13 +34,13 @@
                 app:title='@{isListHide ? R.string.info_notes_hide_title : R.string.info_notes_empty_title}' />
 
             <ProgressBar
-                android:id="@+id/notes_progress"
+                android:id="@+id/progress_bar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/notes_recycler"
+                android:id="@+id/recycler_view"
                 style="@style/RecyclerView.Normal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
