Refactor of NotesFragment.kt and NotesViewModelImpl.kt (5/8)

--- a/app/src/main/res/layout/inc_info.xml
+++ b/app/src/main/res/layout/inc_info.xml
@@ -27,14 +27,14 @@
                 tools:tint="?attr/clContent"/>
 
         <TextView
-                android:id="@+id/info_title_text"
-                style="@style/Text.Info.Title"
+                android:id="@+id/title_text"
+            style="@style/Text.Info.Title"
                 android:text='@{context.getString(title)}'
                 tools:text="@string/info_notes_empty_title"/>
 
         <TextView
-                android:id="@+id/info_details_text"
-                style="@style/Text.Info.Details"
+            android:id="@+id/details_text"
+            style="@style/Text.Info.Details"
                 android:text='@{context.getString(details)}'
                 tools:text="@string/info_notes_empty_details"/>
 
