--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -6,10 +6,6 @@
     <data>
 
         <import type="sgtmelon.scriptum.R" />
-
-        <variable
-            name="isListHide"
-            type="boolean" />
     </data>
 
     <LinearLayout
@@ -29,9 +25,7 @@
             <include
                 android:id="@+id/info_include"
                 layout="@layout/inc_info"
-                app:details='@{isListHide ? R.string.info_notes_hide_details : R.string.info_notes_empty_details}'
-                app:icon='@{R.mipmap.img_info_notes}'
-                app:title='@{isListHide ? R.string.info_notes_hide_title : R.string.info_notes_empty_title}' />
+                app:icon='@{R.mipmap.img_info_notes}' />
 
             <ProgressBar
                 android:id="@+id/progress_bar"
