Started optimizing and fixing UI tests

--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="sgtmelon.scriptum.infrastructure.screen.alarm.AlarmActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/parent_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context="sgtmelon.scriptum.infrastructure.screen.alarm.AlarmActivity">
+        android:orientation="vertical">
 
         <sgtmelon.scriptum.infrastructure.widgets.ripple.RippleContainer
             android:id="@+id/ripple_container"
