--- a/app/src/main/res/layout/activity_help_disappear.xml
+++ b/app/src/main/res/layout/activity_help_disappear.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="sgtmelon.scriptum.infrastructure.screen.preference.disappear.HelpDisappearActivity">
 
     <LinearLayout
         android:id="@+id/parent_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context="sgtmelon.scriptum.infrastructure.screen.preference.disappear.HelpDisappearActivity">
+        android:orientation="vertical">
 
         <include
             android:id="@+id/toolbar_include"
