--- a/app/src/main/res/values/strings_info.xml
+++ b/app/src/main/res/values/strings_info.xml
@@ -9,7 +9,7 @@
     <string name="info_notes_hide_title">You have hidden notes</string>
     <string name="info_bin_empty_title">Bin is empty</string>
     <string name="info_notification_empty_title">No notifications</string>
-    <string name="info_roll_hide_title">All items done!</string>
+    <string name="info_roll_hide_title">All items are done!</string>
     <string name="info_roll_empty_title">You have not created items</string>
     <string name="info_print_empty_title" translatable="false">Sorry!</string>
 
