--- a/app/src/main/res/values/styles_dialog.xml
+++ b/app/src/main/res/values/styles_dialog.xml
@@ -5,6 +5,10 @@
 
     <style name="App.Dialog.Alert" parent="Theme.AppCompat.DayNight.Dialog.Alert">
         <item name="colorAccent">?attr/clAccent</item>
+
+        <!--  Title text color  -->
+        <item name="android:textColorPrimary">?attr/clContent</item>
+
         <item name="android:windowBackground">?attr/clPrimary</item>
         <item name="buttonBarNegativeButtonStyle">@style/App.Dialog.NegativeButton</item>
 
