--- a/app/src/main/res/layout/fragment_rank.xml
+++ b/app/src/main/res/layout/fragment_rank.xml
@@ -9,6 +9,8 @@
 
         <import type="android.view.View" />
 
+        <import type="sgtmelon.scriptum.infrastructure.model.annotation.TestViewTag" />
+
         <variable
             name="isClearEnable"
             type="boolean" />
@@ -19,12 +21,14 @@
     </data>
 
     <LinearLayout
-        android:id="@+id/rank_parent_container"
+        android:id="@+id/parent_container"
+        android:tag='@{TestViewTag.RANK}'
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <include
+            android:id="@+id/toolbar_include"
             layout="@layout/inc_toolbar_rank"
             app:isAddEnable='@{isAddEnable}'
             app:isClearEnable='@{isClearEnable}' />
@@ -42,18 +46,18 @@
                 app:title='@{R.string.info_rank_empty_title}' />
 
             <ProgressBar
-                android:id="@+id/rank_progress"
+                android:id="@+id/progress_bar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center" />
 
             <androidx.coordinatorlayout.widget.CoordinatorLayout
-                android:id="@+id/rank_recycler_container"
+                android:id="@+id/recycler_container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rank_recycler"
+                    android:id="@+id/recycler_view"
                     style="@style/RecyclerView.Normal"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
