--- a/app/src/main/res/layout/fragment_bin.xml
+++ b/app/src/main/res/layout/fragment_bin.xml
@@ -6,10 +6,13 @@
     <data>
 
         <import type="sgtmelon.scriptum.R" />
+
+        <import type="sgtmelon.scriptum.infrastructure.model.annotation.TestViewTag" />
     </data>
 
     <LinearLayout
         android:id="@+id/parent_container"
+        android:tag='@{TestViewTag.BIN}'
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
