Move AboutDialogUi.kt, change email address, start fixing menu tests

--- a/app/src/main/res/values/strings_dialog.xml
+++ b/app/src/main/res/values/strings_dialog.xml
@@ -104,6 +104,6 @@
 
     <string name="dialog_about_developer">Developer:\nKuznetsov Alexey</string>
     <string name="dialog_about_logo_designer">Logo designer:\nPolepkina Arina</string>
-    <string name="dialog_about_email" translatable="false">serjant.arbuz@yandex.ru</string>
+    <string name="dialog_about_email" translatable="false">lex.kuznet@gmail.com</string>
 
 </resources>
