--- a/app/src/main/res/values/strings_preference.xml
+++ b/app/src/main/res/values/strings_preference.xml
@@ -24,7 +24,7 @@
     <string name="pref_title_alarm_volume">Volume</string>
     <string name="pref_title_alarm_increase">Volume increase</string>
 
-    <string name="pref_title_rate">Rate</string>
+    <string name="pref_title_rate">Rate app</string>
     <string name="pref_title_help">Help</string>
     <string name="pref_title_about">About app</string>
     <string name="pref_title_policy">Privacy policy</string>
