--- a/app/src/main/res/layout/fragment_text_note.xml
+++ b/app/src/main/res/layout/fragment_text_note.xml
@@ -39,6 +39,7 @@
         android:orientation="vertical">
 
         <include
+            android:id="@+id/toolbar_include"
             layout="@layout/inc_toolbar_note"
             app:isDataLoad='@{isDataLoad}'
             app:isEditMode='@{isEditMode}'
@@ -92,6 +93,7 @@
         </FrameLayout>
 
         <include
+            android:id="@+id/panel_include"
             layout="@layout/inc_note_panel_text"
             app:inputAccess='@{inputAccess}'
             app:isDataLoad='@{isDataLoad}'
