--- a/app/src/main/res/layout/fragment_roll_note.xml
+++ b/app/src/main/res/layout/fragment_roll_note.xml
@@ -53,6 +53,7 @@
         android:orientation="vertical">
 
         <include
+            android:id="@+id/toolbar_include"
             layout="@layout/inc_toolbar_note"
             app:isDataLoad='@{isDataLoad}'
             app:isEditMode='@{isEditMode}'
@@ -83,6 +84,7 @@
         </FrameLayout>
 
         <include
+            android:id="@+id/add_include"
             layout="@layout/inc_roll_add_panel"
             app:isEditMode='@{isEditMode}'
             app:isEnterEmpty='@{isEnterEmpty}' />
@@ -99,6 +101,7 @@
             tools:progress="65" />
 
         <include
+            android:id="@+id/panel_include"
             layout="@layout/inc_note_panel_roll"
             app:inputAccess='@{inputAccess}'
             app:isDataLoad='@{isDataLoad}'
