Rename note fragment interfaces

--- a/app/src/main/res/layout/inc_note_panel_roll.xml
+++ b/app/src/main/res/layout/inc_note_panel_roll.xml
@@ -20,7 +20,7 @@
 
         <variable
             name="menuCallback"
-            type="sgtmelon.scriptum.cleanup.presentation.screen.ui.callback.note.INoteMenu" />
+            type="sgtmelon.scriptum.cleanup.presentation.screen.ui.callback.note.NoteMenu" />
 
         <variable
             name="isDataLoad"
