--- a/app/src/main/res/layout/inc_note_panel_text.xml
+++ b/app/src/main/res/layout/inc_note_panel_text.xml
@@ -16,7 +16,7 @@
 
         <variable
             name="menuCallback"
-            type="sgtmelon.scriptum.cleanup.presentation.screen.ui.callback.note.INoteMenu" />
+            type="sgtmelon.scriptum.cleanup.presentation.screen.ui.callback.note.NoteMenu" />
 
         <variable
             name="isDataLoad"
