Rename note fragment classes into another package

--- a/app/src/main/res/layout/fragment_roll_note.xml
+++ b/app/src/main/res/layout/fragment_roll_note.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="menuCallback"
-            type="sgtmelon.scriptum.cleanup.presentation.screen.ui.callback.note.NoteMenu" />
+            type="sgtmelon.scriptum.infrastructure.screen.note.NoteMenu" />
 
         <variable
             name="isDataLoad"
