--- a/app/src/main/res/layout/fragment_text_note.xml
+++ b/app/src/main/res/layout/fragment_text_note.xml
@@ -33,7 +33,7 @@
     </data>
 
     <LinearLayout
-        android:id="@+id/text_note_parent_container"
+        android:id="@+id/parent_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -51,12 +51,12 @@
             android:layout_weight="1">
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/text_note_content_card"
+                android:id="@+id/content_card"
                 style="@style/Card.Text"
                 android:layout_height="match_parent">
 
                 <ScrollView
-                    android:id="@+id/text_note_content_scroll"
+                    android:id="@+id/content_scroll"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:fillViewport="true"
@@ -67,18 +67,17 @@
                         android:layout_height="wrap_content">
 
                         <EditText
-                            android:id="@+id/text_note_content_enter"
+                            android:id="@+id/text_enter"
                             style="@style/EditText.TextNote.Enter"
                             android:hint="@string/hint_enter_text"
                             android:importantForAutofill="noExcludeDescendants"
                             android:text='@={item.text}'
                             android:visibility='@{isEditMode ? View.VISIBLE : View.INVISIBLE}'
-                            tools:targetApi="o"
                             tools:visibility="invisible" />
 
                         <!-- Set empty text need for editText may change size -->
                         <TextView
-                            android:id="@+id/text_note_content_text"
+                            android:id="@+id/text_read"
                             style="@style/EditText.TextNote.Read"
                             android:text='@{isEditMode ? "" : item.text}'
                             android:visibility='@{!isEditMode ? View.VISIBLE : View.INVISIBLE}'
